--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "candidate.js",
   "dependencies": {
+    "knex": "^2.3.0",
     "mysql": "^2.18.1",
     "node": "^18.9.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
