--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
   "name": "task-sql",
   "version": "1.0.0",
-  "description": "",
-  "main": "candidate.js",
-  "dependencies": {
-    "knex": "^2.3.0",
-    "mysql": "^2.18.1",
-    "node": "^18.9.0"
-  },
+  "private": true,
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index",
+    "destknex": "knex --knexfile ./config/knexfileDest.js"
   },
-  "author": "Dipen",
-  "license": "ISC"
+  "engines": {
+    "node": ">=16.0.0 <17.0.0",
+    "npm": ">=5.0.0",
+    "yarn": ">=1.0.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "knex": "^2.3.0",
+    "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "nvm": "^0.0.4"
+  }
 }
