--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "knex": "^2.3.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "pg": "^8.8.0"
   },
   "devDependencies": {
     "nvm": "^0.0.4"
